--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Solana Token Launchpad</title>
 
 <style>
@@ -62,6 +62,298 @@ button {
 <button id="walletBtn">Connect Phantom</button>
 
 <form id="form">
+  <input id="name" placeholder="Token Name" required>
+  <input id="symbol" placeholder="Symbol" maxlength="8" required>
+  <input id="supply" type="number" placeholder="Total Supply" required>
+  <input id="image" placeholder="Image URL (https://...png)">
+  <textarea id="description" placeholder="Description"></textarea>
+  <button type="submit">Launch Token</button>
+</form>
+
+</div>
+</div>
+
+<!-- LIBRARIES -->
+<script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
+<script src="https://unpkg.com/@solana/spl-token@latest/lib/index.iife.min.js"></script>
+<script src="https://unpkg.com/@metaplex-foundation/mpl-token-metadata@latest/dist/index.iife.js"></script>
+
+<script>
+const { 
+  Connection, clusterApiUrl, Transaction, SystemProgram, Keypair, LAMPORTS_PER_SOL, PublicKey 
+} = solanaWeb3;
+
+const { 
+  TOKEN_PROGRAM_ID, MINT_SIZE,
+  getMinimumBalanceForRentExemptMint,
+  createInitializeMintInstruction,
+  getAssociatedTokenAddress,
+  createAssociatedTokenAccountInstruction,
+  createMintToInstruction,
+  createSetAuthorityInstruction,
+  AuthorityType
+} = splToken;
+
+const { 
+  createCreateMetadataAccountV3Instruction,
+  PROGRAM_ID: METADATA_PROGRAM_ID 
+} = mplTokenMetadata;
+
+// State variables
+let wallet = null;
+let connection = new Connection(clusterApiUrl('devnet'), 'confirmed');
+let isConnecting = false;
+
+// DOM elements
+const walletBtn = document.getElementById('walletBtn');
+const form = document.getElementById('form');
+const networkSelect = document.getElementById('network');
+const statusDiv = document.createElement('div'); // For feedback messages
+statusDiv.style.marginTop = '1rem';
+statusDiv.style.padding = '1rem';
+statusDiv.style.borderRadius = '12px';
+form.parentNode.insertBefore(statusDiv, form);
+
+// Helper: Get Phantom provider (robust)
+function getProvider() {
+  // Prefer window.solana (common). Fallback to window.phantom?.solana if present.
+  const solanaProvider = window.solana && window.solana.isPhantom ? window.solana : null;
+  const phantomNamespaceProvider = window.phantom?.solana && window.phantom?.solana.isPhantom ? window.phantom.solana : null;
+  const provider = solanaProvider || phantomNamespaceProvider;
+  return provider || null;
+}
+
+// Disable/enable form
+function toggleForm(disabled) {
+  form.querySelectorAll('input,textarea,button,select').forEach(el => el.disabled = disabled);
+}
+
+// Show status message
+function showStatus(msg, isError = false) {
+  statusDiv.textContent = msg;
+  statusDiv.style.background = isError ? 'rgba(239,68,68,0.15)' : 'rgba(34,197,94,0.15)';
+  statusDiv.style.border = `1px solid ${isError ? '#ef4444' : '#22c55e'}`;
+  statusDiv.style.color = isError ? '#fecaca' : '#bbf7d0';
+}
+
+// Update button text
+function updateWalletButton() {
+  if (wallet?.publicKey) {
+    const pk = wallet.publicKey.toString();
+    walletBtn.textContent = pk.slice(0,6) + '…' + pk.slice(-4);
+    toggleForm(false);
+  } else {
+    walletBtn.textContent = 'Connect Phantom';
+    toggleForm(true);
+  }
+}
+
+// Network change
+networkSelect.onchange = () => {
+  connection = new Connection(clusterApiUrl(networkSelect.value), 'confirmed');
+  if (networkSelect.value === 'mainnet-beta') {
+    if (!confirm('⚠️ Switching to MAINNET — real SOL will be spent! Continue?')) {
+      networkSelect.value = 'devnet';
+      connection = new Connection(clusterApiUrl('devnet'), 'confirmed');
+    }
+  }
+  showStatus(`Connected to ${networkSelect.value.toUpperCase()}`);
+};
+
+// Connect handler
+async function connectWallet(eager = false) {
+  if (isConnecting) return;
+  isConnecting = true;
+  walletBtn.disabled = true;
+  walletBtn.textContent = eager ? 'Auto-connecting...' : 'Connecting...';
+
+  try {
+    const provider = getProvider();
+    if (!provider) {
+      showStatus('Phantom not detected! Make sure you\'re using Phantom\'s in-app browser (globe icon).', true);
+      throw new Error('No Phantom provider');
+    }
+
+    const params = eager ? { onlyIfTrusted: true } : {};
+    const resp = await provider.connect(params);
+
+    wallet = { publicKey: resp.publicKey };
+    showStatus('Connected successfully! 🎉');
+    updateWalletButton();
+  } catch (err) {
+    console.error(err);
+    if (err?.code === 4001) {
+      showStatus('Connection rejected by user.', true);
+    } else {
+      showStatus('Connection failed: ' + (err?.message || 'Unknown error'), true);
+    }
+    updateWalletButton();
+  } finally {
+    isConnecting = false;
+    walletBtn.disabled = false;
+  }
+}
+
+// Try eager connection on load (if previously trusted)
+window.addEventListener('load', () => {
+  connectWallet(true);
+});
+
+// Manual connect button
+walletBtn.onclick = () => connectWallet(false);
+
+// Safe data-uri building for JSON metadata (handles unicode)
+function jsonToDataUri(obj) {
+  const json = JSON.stringify(obj);
+  // Safe unicode handling for btoa
+  const utf8Bytes = new TextEncoder().encode(json);
+  let binary = '';
+  for (let i = 0; i < utf8Bytes.length; i++) {
+    binary += String.fromCharCode(utf8Bytes[i]);
+  }
+  return 'data:application/json;base64,' + btoa(binary);
+}
+
+// Form submission
+form.onsubmit = async (e) => {
+  e.preventDefault();
+  if (!wallet?.publicKey) return;
+
+  const name = document.getElementById('name').value;
+  const symbol = document.getElementById('symbol').value;
+  const supply = document.getElementById('supply').value;
+  const image = document.getElementById('image').value || '';
+  const description = document.getElementById('description').value || '';
+  const decimals = 9;
+
+  const provider = getProvider();
+  if (!provider) return showStatus('Lost wallet connection!', true);
+
+  try {
+    showStatus('Preparing transaction...');
+
+    // Check balance
+    const balance = await connection.getBalance(wallet.publicKey);
+    if (balance < LAMPORTS_PER_SOL * 0.005) {
+      throw new Error('Insufficient SOL balance for fees and rent (need ~0.005 SOL)');
+    }
+
+    const mint = Keypair.generate();
+    const lamports = await getMinimumBalanceForRentExemptMint(connection);
+    const tokenAta = await getAssociatedTokenAddress(mint.publicKey, wallet.publicKey);
+
+    const [metadataPDA] = PublicKey.findProgramAddressSync(
+      [Buffer.from('metadata'), METADATA_PROGRAM_ID.toBuffer(), mint.publicKey.toBuffer()],
+      METADATA_PROGRAM_ID
+    );
+
+    // Embedded metadata URI (safely encoded)
+    const metadataJson = {
+      name,
+      symbol,
+      description,
+      image,
+      attributes: [],
+      properties: {
+        files: image ? [{ uri: image, type: 'image/png' }] : [],
+      }
+    };
+    const uri = jsonToDataUri(metadataJson);
+
+    const metadataData = {
+      name,
+      symbol,
+      uri,
+      sellerFeeBasisPoints: 0,
+      creators: [],
+      collection: null,
+      uses: null
+    };
+
+    const tx = new Transaction();
+    tx.add(
+      SystemProgram.createAccount({
+        fromPubkey: wallet.publicKey,
+        newAccountPubkey: mint.publicKey,
+        space: MINT_SIZE,
+        lamports,
+        programId: TOKEN_PROGRAM_ID,
+      }),
+      createInitializeMintInstruction(
+        mint.publicKey,
+        decimals,
+        wallet.publicKey,
+        wallet.publicKey // Freeze authority
+      ),
+      createAssociatedTokenAccountInstruction(
+        wallet.publicKey,
+        tokenAta,
+        wallet.publicKey,
+        mint.publicKey
+      ),
+      createMintToInstruction(
+        mint.publicKey,
+        tokenAta,
+        wallet.publicKey,
+        // safer BigInt math
+        BigInt(supply) * (BigInt(10) ** BigInt(decimals))
+      ),
+      createCreateMetadataAccountV3Instruction(
+        {
+          metadata: metadataPDA,
+          mint: mint.publicKey,
+          mintAuthority: wallet.publicKey,
+          payer: wallet.publicKey,
+          updateAuthority: wallet.publicKey,
+        },
+        {
+          createMetadataAccountArgsV3: {
+            data: metadataData,
+            isMutable: true,
+            collectionDetails: null,
+          },
+        }
+      ),
+      createSetAuthorityInstruction(
+        mint.publicKey,
+        wallet.publicKey,
+        AuthorityType.MintTokens,
+        null
+      )
+    );
+
+    tx.feePayer = wallet.publicKey;
+    const { blockhash } = await connection.getLatestBlockhash();
+    tx.recentBlockhash = blockhash;
+    tx.partialSign(mint);
+
+    const signedTx = await provider.signTransaction(tx);
+    const sig = await connection.sendRawTransaction(signedTx.serialize());
+    await connection.confirmTransaction(sig);
+
+    const mintAddress = mint.publicKey.toBase58();
+    // Build explorer URL properly
+    const explorerUrl = networkSelect.value === 'mainnet-beta'
+      ? `https://explorer.solana.com/address/${mintAddress}`
+      : `https://explorer.solana.com/address/${mintAddress}?cluster=devnet`;
+
+    showStatus(`Success! Token minted. Mint: ${mintAddress}`, false);
+    // Open explorer in a new tab and also alert
+    window.open(explorerUrl, '_blank');
+    alert(`TOKEN LAUNCHED 🚀\n\nMint: ${mintAddress}\nExplorer: ${explorerUrl}`);
+  } catch (err) {
+    console.error(err);
+    showStatus('Transaction failed: ' + (err?.message || 'Unknown'), true);
+  }
+};
+
+// Initial setup
+updateWalletButton();
+toggleForm(true);
+</script>
+
+</body>
+</html><form id="form">
   <input id="name" placeholder="Token Name" required>
   <input id="symbol" placeholder="Symbol" maxlength="8" required>
   <input id="supply" type="number" placeholder="Total Supply" required>
