Update balance display to show '— SOL'

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@ footer{
 
 <div class="container">
   <div class="status" id="status">NOT CONNECTED</div>
-  <div class="balance" id="balance">Balance: 100 SOL</div>
-
+  <div class="balance" id="balance">Balance: — SOL</div>
   <div style="margin:24px 0;text-align:center">
     <div class="wallet-adapter-button-container"></div>
     <button id="phantomBtn" type="button">Connect Phantom Wallet</button>
